# chronos-fm

./: .coderabbit.yaml  .dockerignore  .gitignore  .rules  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  chronos-fm.desktop  clippy.toml  deny.toml  flake.nix  rustfmt.toml  typos.toml
.claude/skills/pull-request/: SKILL.md
.claude/skills/pull-request/scripts/: attach-screenshots.sh  review-status.sh
.claude/skills/rust-skills/rules/: api-extension-trait.md  api-newtype-safety.md  async-oneshot-response.md  async-try-join.md
.codex/skills/rust-skills/rules/: api-impl-into.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: aur-publish.yml  cachy.yml  ci.yml  machete.yml
assets/icons/: .gitkeep
crates/chronos-fm/: Cargo.toml
crates/chronos-fm-core/: Cargo.toml
crates/chronos-fm-core/examples/: schema.rs
crates/chronos-fm-core/src/: chronos_fm_core.rs  errors.rs
crates/chronos-fm-core/src/config/: loader.rs  paths.rs  settings.rs  watcher.rs
crates/chronos-fm-core/src/config/snapshots/: chronos_fm_core__config__settings__tests__from_toml_str_output_snapshot.snap
crates/chronos-fm-core/src/telemetry/: logging.rs
crates/chronos-fm-models/: Cargo.toml
crates/chronos-fm-models/src/: chronos_fm_models.rs  file_entry.rs
crates/chronos-fm-pages/: Cargo.toml
crates/chronos-fm-pages/src/: chronos_fm_pages.rs  explorer.rs  extensions.rs  git.rs  pane_group.rs  root.rs  s3.rs  settings.rs
crates/chronos-fm-pages/src/explorer/: entries.rs  list_setup.rs  navigation.rs  page.rs  preview.rs  search.rs  state.rs  tests.rs  view.rs
crates/chronos-fm-pages/src/explorer/view/: header.rs  listing.rs  preview.rs  sidebar.rs
crates/chronos-fm-pages/src/explorer/view/listing/: grid.rs  list.rs  row.rs  search_bar.rs
crates/chronos-fm-services/: Cargo.toml
crates/chronos-fm-services/src/: chronos_fm_services.rs  fs.rs  search.rs
crates/chronos-fm-services/src/fs/: listing.rs  ops.rs
crates/chronos-fm-services/src/search/: engine.rs  indexer.rs  spotlight.rs  watcher.rs
crates/chronos-fm-store/: Cargo.toml
crates/chronos-fm-store/migrations/: 001_init.sql
crates/chronos-fm-store/src/: chronos_fm_store.rs  redb_kv.rs  sqlite.rs
crates/chronos-fm-ui/: Cargo.toml
crates/chronos-fm-ui/src/: assets.rs  chronos_fm_ui.rs  theme.rs  window.rs
crates/chronos-fm-ui/src/components/: file_list.rs
crates/chronos-fm-ui/src/components/layout/: footer.rs
crates/chronos-fm-ui/src/window/: traffic_lights.rs
crates/chronos-fm/src/: app.rs  cli.rs  main.rs
crates/nohrs/: Cargo.toml
crates/nohrs-core/: Cargo.toml
crates/nohrs-core/examples/: schema.rs
crates/nohrs-core/src/: config.rs  errors.rs  nohrs_core.rs  telemetry.rs
crates/nohrs-core/src/config/: loader.rs  paths.rs  settings.rs  watcher.rs
crates/nohrs-core/src/config/snapshots/: nohrs_core__config__settings__tests__from_toml_str_output_snapshot.snap
crates/nohrs-core/src/telemetry/: logging.rs
crates/nohrs-models/: Cargo.toml
crates/nohrs-models/src/: file_entry.rs  nohrs_models.rs
crates/nohrs-pages/: Cargo.toml
crates/nohrs-pages/src/: explorer.rs  extensions.rs  git.rs  nohrs_pages.rs  pane_group.rs  root.rs  s3.rs  settings.rs
crates/nohrs-pages/src/explorer/: entries.rs  list_setup.rs  navigation.rs  page.rs  preview.rs  search.rs  state.rs  tests.rs  types.rs  view.rs
crates/nohrs-pages/src/explorer/view/: header.rs  listing.rs  preview.rs  sidebar.rs
crates/nohrs-pages/src/explorer/view/listing/: grid.rs  list.rs  row.rs  search_bar.rs
crates/nohrs-pages/src/explorer/view/preview/: editor.rs
crates/nohrs-services/: Cargo.toml
crates/nohrs-services/src/: fs.rs  search.rs  syntax.rs
crates/nohrs-services/src/fs/: listing.rs  ops.rs
crates/nohrs-services/src/search/: backend.rs  engine.rs  indexer.rs  ripgrep.rs  spotlight.rs  watcher.rs
crates/nohrs-services/tests/: indexing_test.rs  watcher_test.rs
crates/nohrs-store/: Cargo.toml
crates/nohrs-store/migrations/: 001_init.sql
crates/nohrs-store/src/: nohrs_store.rs  redb_kv.rs  sqlite.rs
crates/nohrs-ui/: Cargo.toml
crates/nohrs-ui/src/: assets.rs  components.rs  nohrs_ui.rs  theme.rs  window.rs
crates/nohrs-ui/src/components/: file_list.rs  layout.rs  pane.rs
crates/nohrs-ui/src/components/layout/: footer.rs  unified_toolbar.rs
crates/nohrs-ui/src/window/: traffic_lights.rs
crates/nohrs/src/: app.rs  cli.rs  main.rs
docker/ci/: Dockerfile  docker-compose.gpu.yml  docker-compose.yml
docker/dev/: Dockerfile  docker-compose.gpu.yml  docker-compose.vnc.yml  docker-compose.yml
docs/: MAINTENANCE.md  QUALITY_IMPROVEMENT_PLAN.md  README.ja.md  ROADMAP.md  SEARCH_IMPLEMENTATION.md  agent-ui-verification.md  architecture.md  async-runtime.md  build-and-display-linux.md  config.md  config.schema.json  dev-environment.md  explorer-essentials.md  launcher.md  os-integration.md  persistence.md  plugin-api.md  plugin-distribution.md  plugin-overview.md  plugin-permissions.md  plugin-templates.md  release-notes-template.md  release-notes-v0.1.0-cachy1.md  release-testing-checklist.md  search.md  testing.md  web.md
docs/adr/: 0001-sqlite-tantivy-hybrid-search.md  0002-macos-only-short-term.md  0003-cargo-workspace-layer-split.md  0004-remove-tokio.md  0005-wit-bindgen-component-model.md  0006-monorepo-web.md  0007-cloudflare-hosting.md  0008-web-design-system.md  README.md
docs/superpowers/plans/: 2026-07-09-chronos-fm-cachy-port.md
docs/superpowers/specs/: 2026-07-09-chronos-fm-cachy-port-design.md
packaging/arch/: PKGBUILD
script/: gen-pkgbuild.sh  ui-run.sh  verify-deps.sh  xwd2png.py
src/core/: config.rs
src/pages/explorer/: list_setup.rs  mod.rs  navigation.rs  preview.rs  search.rs  state.rs  types.rs
src/pages/explorer/view/: mod.rs
src/services/fs/: listing.rs
src/services/search/: engine.rs  indexer.rs  ripgrep.rs  spotlight.rs
src/ui/: app.rs  theme.rs
src/ui/components/: file_list.rs
(+3 files in other folders)
