[workspace]
resolver = "2"
members = [
  "crates/nohrs",
  "crates/nohrs-core",
  "crates/nohrs-models",
  "crates/nohrs-services",
  "crates/nohrs-ui",
  "crates/nohrs-pages",
]
# P2 以降に追加:
#   "crates/nohrs-store",
#   "crates/nohrs-launcher",
#   "crates/nohrs-plugin-host",
#   "crates/plugins/*"
exclude = ["web"]

# gpui renders with Metal/Blade and the GUI stack is only exercised on macOS, so
# Linux CI builds headless. `default-members` keeps bare `cargo build`/`test`/
# `clippy` to the toolkit-free crates; the GUI crates (nohrs-ui / nohrs-pages /
# nohrs) are still workspace members and build with `--workspace`, `-p`, or on
# macOS. This mirrors the previous single-crate `default = []` / `gui` feature.
default-members = [
  "crates/nohrs-core",
  "crates/nohrs-models",
  "crates/nohrs-services",
]

[workspace.package]
version      = "0.2.0"
edition      = "2021"
rust-version = "1.83"
license      = "MIT"
repository   = "https://github.com/noh-rs/nohrs"
homepage     = "https://nohrs.app"
authors      = ["nohrs contributors"]

[workspace.dependencies]
anyhow             = "1"
thiserror          = "1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
time               = { version = "0.3", features = ["formatting", "macros"] }

[workspace.lints.rust]
unsafe_code  = "deny"
missing_docs = "allow"   # TODO(#48): raise to "warn" (P1 target) once public APIs are
                         # documented, then to "deny" (P7). Kept at "allow" for now so the
                         # CI gate `cargo clippy -- -D warnings` stays green through the
                         # workspace split, which does not add docs to the ~5k LOC surface.

[workspace.lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
