[package]
name = "chronos-fm-models"
description = "Pure data types shared across chronos-fm crates."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
authors.workspace      = true

[lib]
name = "chronos_fm_models"
path = "src/chronos_fm_models.rs"

[dependencies]
serde.workspace = true

[lints]
workspace = true
