[package]
name = "chronos-fm-pages"
description = "Page views (explorer, settings, git, s3) for the chronos-fm app."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
authors.workspace      = true

[lib]
name = "chronos_fm_pages"
path = "src/chronos_fm_pages.rs"

[dependencies]
chronos-fm-core     = { path = "../chronos-fm-core" }
chronos-fm-models   = { path = "../chronos-fm-models" }
chronos-fm-services = { path = "../chronos-fm-services", features = ["gui"] }
chronos-fm-store    = { path = "../chronos-fm-store" }
chronos-fm-ui       = { path = "../chronos-fm-ui" }
gpui = "0.2"
gpui-component = "0.5"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
anyhow.workspace     = true
serde.workspace      = true
serde_json.workspace = true
tracing.workspace    = true
time.workspace       = true

[dev-dependencies]
# `test-support` gates `TestAppContext` and the `#[gpui::test]` macro. It is a
# dev-dependency so the gpui test backend only links into the test build.
gpui = { version = "0.2", features = ["test-support"] }
tempfile = "3"

[lints]
workspace = true
