[package]
name = "chronos-fm"
description = "Launcher × Explorer — a fast, extensible, plugin-ready file workspace built in Rust."
keywords = ["launcher", "file-explorer", "file-manager", "gpui", "productivity"]
categories = ["filesystem", "gui"]
readme = "../../README.md"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
authors.workspace      = true

[[bin]]
name = "chronos-fm"
path = "src/main.rs"

[dependencies]
chronos-fm-core     = { path = "../chronos-fm-core" }
chronos-fm-models   = { path = "../chronos-fm-models" }
chronos-fm-services = { path = "../chronos-fm-services", features = ["gui"] }
chronos-fm-ui       = { path = "../chronos-fm-ui" }
chronos-fm-pages    = { path = "../chronos-fm-pages" }
chronos-fm-store    = { path = "../chronos-fm-store" }
gpui = "0.2"
gpui-component = "0.5"
tracing.workspace = true
clap = { version = "4", features = ["derive"] }

[lints]
workspace = true
