[package]
name = "nohrs-core"
description = "Core primitives (errors, config, telemetry) shared across nohrs crates."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
authors.workspace      = true

[lib]
name = "nohrs_core"
path = "src/nohrs_core.rs"

[dependencies]
thiserror.workspace          = true
tracing.workspace            = true
tracing-subscriber.workspace = true
time.workspace               = true
serde.workspace              = true
serde_json.workspace         = true
toml                         = "0.8"
schemars                     = "1"
notify                       = "7"
dirs                         = "5"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
