[package]
name = "nohrs-models"
description = "Pure data types shared across nohrs crates."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
authors.workspace      = true

[lib]
name = "nohrs_models"
path = "src/nohrs_models.rs"

[dependencies]
serde.workspace = true

[lints]
workspace = true
