[package]
name = "nohrs-pages"
description = "Page views (explorer, settings, git, s3) for the nohrs app."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
authors.workspace      = true

[lib]
name = "nohrs_pages"
path = "src/nohrs_pages.rs"

[dependencies]
nohrs-core     = { path = "../nohrs-core" }
nohrs-models   = { path = "../nohrs-models" }
nohrs-services = { path = "../nohrs-services", features = ["gui"] }
nohrs-ui       = { path = "../nohrs-ui" }
gpui = "0.2"
gpui-component = "0.3"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
anyhow.workspace     = true
serde.workspace      = true
serde_json.workspace = true
tracing.workspace    = true
time.workspace       = true

[dev-dependencies]
# `test-support` gates `TestAppContext` and the `#[gpui::test]` macro. It is a
# dev-dependency so the gpui test backend only links into the test build.
gpui = { version = "0.2", features = ["test-support"] }
tempfile = "3"

[lints]
workspace = true
