[package]
name = "nohrs-services"
description = "Filesystem listing, search, and syntax-highlighting services for nohrs."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
authors.workspace      = true

[lib]
name = "nohrs_services"
path = "src/nohrs_services.rs"

[features]
# `syntax` produces gpui colors, so it (and its heavy syntect dependency) is
# gated behind `gui`. fs/search build without any UI toolkit.
gui = ["dep:gpui", "dep:syntect"]

[dependencies]
nohrs-core   = { path = "../nohrs-core" }
nohrs-models = { path = "../nohrs-models" }
anyhow.workspace  = true
serde.workspace   = true
tracing.workspace = true
time.workspace    = true
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tantivy = "0.22"
ignore = "0.4"
grep = "0.4"
dirs = "5.0"
notify = "6"
notify-debouncer-mini = "0.4"
gpui = { version = "0.2", optional = true }
syntect = { version = "5", default-features = false, features = ["default-fancy"], optional = true }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
